add uploads && LBFGS.docx

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://tianshan.github.io" # the base hostname & protocol for your site
 
 imageurl: "/images"
+uploads: "/uploads"
 
 defaults:
   -
