--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,12 @@
-# SITE CONFIGURATION
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://tianshan.github.io" # the base hostname & protocol for your site
+#
+# Basic settings.
+#
+#url: http:127.0.0.1:4000
+url: http://tianshan.github.io
+baseurl: ""
+title: tianshan
+description: Do yourself.
+avatar: /assets/img/ogp.png
 
 imageurl: "/images"
 uploads: "/uploads"
@@ -15,58 +21,103 @@ defaults:
       author: "tianshan"
       email: "qutianshan0214@163.com"
 
-# THEME-SPECIFIC CONFIGURATION
-theme:
-  # Meta
-  title: 我的博客
-  avatar: 
-  gravatar: # email md5 hash
-  description: "tianshan's blog" # used by search engines
-
-  # Header and footer text
-  footer_text: Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
-
-  # Icons
-  rss: false
-  email_address: qutianshan0214@163.com # full email address, e.g. "sam@example.com"
-  dribbble: 
-  facebook: 
-  flickr: 
-  github: "tianshan"
-  google_plus: 
-  instagram: 
-  linkedin:  # full URL
-  pinterest: 
-  reddit: 
-  soundcloud: 
-  stack_exchange:  # full URL
+#
+# Icons
+#
+icons:
+  rss: true
+  email: qutianshan0214@163.com
+  github: tianshan
+  bitbucket:
   twitter: 
-  wordpress: 
-  youtube: 
+  facebook:
+  google_plus:
+  tumblr:
+  behance:
+  dribbble:
+  flickr:
+  instagram:
+  linkedin:  # full URL
+  pinterest:
+  reddit:
+  soundcloud:
+  stack_exchange:  # full URL
+  steam:
+  wordpress:
+  youtube:
 
-  # Scripts
-  google_analytics: UA-60561225-1 # tracking id, e.g. "UA-000000-01"
-  disqus_shortname: tianshan
+#
+# Prettify url.
+#
+permalink: pretty
 
-  # Localization strings
-  str_follow_on: "Follow on"
-  str_rss_follow: "Follow RSS feed"
-  str_email: "Email"
-  str_next: "Next"
-  str_prev: "Prev"
-  str_continue_reading: "Continue reading"
+#
+# Scripts.
+#
+google_analytics: UA-60561225-1
+disqus: tianshan
 
-  # Colors, typography and padding
-  # Open the "_sass > base" folder, and open "_variables.scss"
+#
+# Localizations.
+#
+str_next: Next
+str_prev: Prev
+str_read_more: Read more...
+str_search: Search
+str_recent_posts: Recent posts
+str_show_all_posts: Show all posts
 
-# PAGINATION
-paginate: 5
-paginate_path: "page:num"
+#
+# Recent posts.
+#
+recent_posts_num: 10
 
-# BUILD SETTINGS
-markdown: kramdown
+#
+# Pagination.
+#
+paginate: 10
+paginate_path: page/:num
+
+#
+# Social.
+#
+share_buttons: false
+ogp:
+  image_url: http://qckanemoto.github.io/jekyll-qck-theme/assets/img/ogp.png
+  fb:
+    admin: # facebook admin id
+    app_id: # facebook application id
+
+#
+# Gems.
+#
+gems:
+  - jemoji
+
+#
+# Styles: see "_sass/base/_variables.scss"
+#
+
+#
+# !! Danger zone !!
+#
+
+include: ["_pages"]
+
+markdown: redcarpet
+redcarpet:
+  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 highlighter: pygments
+
+excerpt_separator: <!--more-->
 
 sass:
   sass_dir: _sass
-  style: :compressed
+  style: :compressed # or :expanded
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - vendor
