--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://tianshan.github.io
 baseurl: ""
 title: tianshan
 description: Do yourself.
-avatar: /assets/img/ogp.png
+avatar: /assets/img/ts.jpg
 
 imageurl: "/images"
 uploads: "/uploads"
