--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,7 @@ ogp:
 #
 gems:
   - jemoji
+  - jekyll-paginate
 
 #
 # Styles: see "_sass/base/_variables.scss"
@@ -104,7 +105,7 @@ gems:
 
 include: ["_pages"]
 
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 highlighter: rouge
