--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ google_ad_slot           :
 author:
   name             : "tianshan"
   avatar           : "ts.jpg"
-  bio              : "learing record"
+  bio              : "笔记"
   location         : "Somewhere"
   email            : qutianshan0214@163.com
   uri              :
